--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <link title="bootstrapcss" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
     <link rel="alternate stylesheet" title="bootstrapcss" href="../src/bootstrap-5.1.3-dist/css/bootstrap.css" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Hello React</title>
+    <title>Maybe I am actually a Student</title>
   </head>
 
   <body>
